[package]
name = "drisk-api"
version = "0.0.7"
description = "drisk_api - API to connect to dRISK Edge."
homepage = "https://github.com/driskai/drisk_api"
repository = "https://github.com/driskai/drisk_api"
keywords = ["drisk"]
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "drisk_api"
crate-type = ["lib", "cdylib"]

[features]
extension-module = ["dep:pyo3"]

[dependencies]
bincode = { version = "1.3.3" }
hashbrown = { version = "0.14.0", features = ["serde"] }
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.0" }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
