[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "drisk_api"

[project]
name = "drisk_api"
description = "drisk_api - API to connect to dRISK Edge."
version = "0.0.7"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/driskai/drisk_api/tree/main"
"Edge" = "https://demo.drisk.ai/"
"Edge Docs" = "https://demo.drisk.ai/docs/"
